# new-crosstalk-sample

./: README.md  hardhat.config.ts  package.json
contracts/: CrossTalkUtils.sol  PingPong.sol  TestDapp.sol  XERC1155.sol  XERC20.sol  XERC721.sol
contracts/Mock/: MockGateway.sol
contracts/XERC721/: src.sol
cosmwasm/: .env.example  .gitignore  Cargo.toml  package.json
cosmwasm/.cargo/: config
cosmwasm/contracts/cw1155-token/: Cargo.toml
cosmwasm/contracts/cw1155-token/src/: lib.rs
cosmwasm/contracts/cw20-token/: Cargo.toml
cosmwasm/contracts/cw20-token/src/: lib.rs
cosmwasm/contracts/ping-pong/: Cargo.toml
cosmwasm/contracts/ping-pong/examples/: schema.rs
cosmwasm/contracts/ping-pong/src/: contract.rs  execution.rs  lib.rs  query.rs  state.rs  tests.rs
cosmwasm/contracts/test-dapp/: Cargo.toml
cosmwasm/contracts/test-dapp/examples/: schema.rs
cosmwasm/contracts/test-dapp/src/: contract.rs  execution.rs  query.rs  tests.rs
cosmwasm/contracts/xerc1155/: Cargo.toml
cosmwasm/contracts/xerc1155/examples/: schema.rs
cosmwasm/contracts/xerc1155/src/: contract.rs  execution.rs  lib.rs  query.rs  state.rs
cosmwasm/contracts/xerc20/: Cargo.toml
cosmwasm/contracts/xerc20/examples/: schema.rs
cosmwasm/contracts/xerc20/src/: contract.rs  execution.rs  handle_sudo_execution.rs  lib.rs  modifiers.rs  query.rs  state.rs  tests.rs
cosmwasm/contracts/xerc721/: Cargo.toml
cosmwasm/contracts/xerc721/examples/: schema.rs
cosmwasm/contracts/xerc721/src/: contract.rs  execution.rs  query.rs  state.rs  tests.rs
cosmwasm/scripts/: deploy.ts  deploy_pingpong.ts  deploy_xerc115.ts  deploy_xerc20.ts  deploy_xerc721.ts
cosmwasm/shell/: build.sh
cosmwasm/tasks/: init_xerc20.ts  perform_query.ts
cosmwasm/tasks/scripts/: create_pair.ts  migrate_texchange.ts  provide_liquidity.ts  set_chain_types.ts  set_initial_configurations.ts  setup_evm.ts  upload_wasm.ts
cosmwasm/utils/: execute.ts  init_wasm.ts  upload_wasm.ts  utils.ts
deployment/: deployments.json
evm/: .gitignore  README.md  hardhat.config.ts  package-lock.json  package.json
evm/contracts/: PingPong.sol  XERC1155.sol  XERC20.sol  XERC721.sol
evm/contracts/Mock/: MockGateway.sol
evm/contracts/XERC721/: des.sol  src.sol
evm/deployment/: deployments.json
evm/deployment/config/: xerc20.json
evm/tasks/: enroll_added_chain.ts  enroll_on_chain.ts
evm/tasks/deploy/: DeployOnEachChain.ts  PingPong.ts  XERC20.ts
evm/test/: PingPong.ts
evm/utils/: OnEachChain.ts  chain.ts  types.ts  utils.ts
near/: .gitignore  Cargo.toml  README.md  build.sh  deploy.sh  package.json
near/PingPong/: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  package.json
near/PingPong/.cargo/: config
near/PingPong/scripts/: chains.json  deployment.json  sendPing.ts
near/PingPong/src/: external.rs  lib.rs  tests.rs
near/contracts/near-e2e-dapp/: Cargo.toml
near/contracts/near-e2e-dapp/src/: contract.rs  external.rs  types.rs
near/contracts/ping-pong/: .gitignore  Cargo.toml  package.json
near/contracts/ping-pong/src/: events.rs  lib.rs
near/deployment/: .env.example  chains.json  deployment.json  package.json
near/deployment/scripts/: approveFeePayer.ts  deployPingPong.ts  sendPing.ts  utils.ts
near/near-e2e-dapp/: Cargo.toml  deploy.sh
near/near-e2e-dapp/src/: contract.rs  lib.rs  tests.rs
solana/: .gitignore  Anchor.toml  README.md  package.json
solana/programs/ping_pong/: Cargo.toml
solana/programs/ping_pong/src/: lib.rs
solana/scripts/: ping-pong.ts  ping-pong.utils.ts  utils.ts
substrate/: .env.example  .gitignore  Cargo.toml  Docker  Dockerfile  README.md  build.sh  jest.config.js  package-lock.json  package.json  tsconfig.json  typechain.config.json
substrate/contracts/rate-limit/: Cargo.toml  README.md
substrate/contracts/rate-limit/src/: lib.rs  types.rs
substrate/contracts/test-dapp/: Cargo.toml  README.md
substrate/contracts/test-dapp/src/: cpi.rs  lib.rs  types.rs
substrate/scripts/: deploy.ts  fixJsonFile.ts  utils.ts
substrate/scripts/config/: chain.config.ts
sui/: .gitignore  package.json  tsconfig.json
sui/contracts/ping_pong/: Move.toml
sui/contracts/ping_pong/sources/: ping_pong.move  tests.move
tasks/: execute_msg.ts  index.ts  init_contract.ts  storeDeployments.ts
tasks/deploy/: PingPong.ts  XERC1155.ts  XERC20.ts  XERC721.ts
tasks/scripts/: migrate.ts  setup_texchange.sh
