[package]
name = "test-dapp"
version = "1.0.0"
authors = ["Near Inc <hello@near.org>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "4.0.0"
ethabi = { version = "18.0.0", default-features = false }
hex = { version = "0.4.3", default-features = false }
uint = { version = "0.9.3", default-features = false }
getrandom = {version = "0.2.0", features = ["custom"]}

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

