[package]
name = "ping_pong"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"
authors = ["Priyanshu Mishra"]

[lib]
crate-type = ["cdylib", "lib"]
name = "ping_pong"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
gateway = { git = "https://github.com/router-protocol/router-gateway-contracts/", tag = "testnet.Aak2MJfJAhFk3vmg2LG97hmNa3TUtKzn4kM7FgWYLw5F", default-features = false, features = [
    "cpi",
] }
anchor-lang = { version = "0.29.0", features = ["init-if-needed", "event-cpi"] }
anchor-spl = "0.29.0"
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
num-derive = "0.4.2"
num-traits = "0.2.18"
bytemuck = { version = "1.14.3", features = ["derive", "min_const_generics"] }
solana-security-txt = "1.1.1"
# dapp = { path = "./../dapp" ,features = ["cpi"]}
